--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,10 +18,11 @@
             android:layout_height="wrap_content"
             android:layout_weight="9"
             android:hint="@string/search"/>
-        <ImageView
-            android:id="@+id/image_search"
+
+        <ImageButton
+            android:id="@+id/button_search"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:src="@drawable/ic_search_black_24dp"
             android:layout_weight="1"
             android:layout_gravity="center"
